# opage

./: .gitignore  .gitmodules  .releaserc.json  CHANGELOG.md  Cargo.toml  README.md  run_test.sh  tests.sh
.github/workflows/: cargo-test.yml  integration-tests.yml  release.yml  semverbot.yml
src/: cli.rs  generator.rs  lib.rs  main.rs
src/generator/: cargo.rs  component.rs  mod.rs  paths.rs
src/generator/component/: object_definition.rs  type_definition.rs
src/generator/component/object_definition/: types.rs
src/generator/path/: default_request.rs  utils.rs  websocket_request.rs
src/generator/rust_reqwest_async/: cargo.rs  component.rs  mod.rs  objects.rs  paths.rs  project.rs  templates.rs
src/generator/rust_reqwest_async/component/object_definition/: types.rs
src/generator/rust_reqwest_async/path/: default_request.rs  http_request.rs  mod.rs  utils.rs  websocket_request.rs
src/parser/: component.rs
src/parser/component/: object_definition.rs  type_definition.rs
src/parser/component/object_definition/: types.rs
src/utils/: config.rs  log.rs  mod.rs  name_mapper.rs  name_mapping.rs  spec_ignore.rs
templates/rust_reqwest_async/: base.rs.jinja  cargo.toml.jinja  http.rs.jinja  websocket.rs.jinja  websocket.template.txt
tests/: mod.rs
tests/components/: mod.rs  name.rs  properties.rs
tests/components/specs/: component_with_title.openapi.yaml  empty_component.openapi.yaml  self_ref.openapi.yaml
tests/projects/any_type_ref_renaming/: config.json  spec.openapi.yaml
tests/projects/array_ref_type/: config.json  spec.openapi.yaml
tests/projects/const_types/: config.json  spec.openapi.yaml
tests/projects/empty_json_payload/: spec.openapi.yaml
tests/projects/empty_spec/: spec.openapi.yaml
tests/projects/inline_object_same_name/: config.json  spec.openapi.yaml
tests/projects/multi_content_types/: config.json  spec.openapi.yaml
tests/projects/primitive_component/: config.json  spec.openapi.yaml
tests/projects/primitive_components_refs/: config.json  spec.openapi.yaml
tests/projects/property_ref_type/: config.json  spec.openapi.yaml
tests/projects/rust_keyword_component/: config.json  spec.openapi.yaml
tests/projects/self_ref_object/: config.json  spec.openapi.yaml
tests/projects/wandelbots/: config.json  spec.openapi.yaml
tests/projects/wandelbots_nova_latest/: config.json  spec.openapi.yaml
tests/projects/wandelbots_nova_v2/: config.json  spec.openapi.yaml
tests/resources/: inline_object_same_name.json
tests/response/: application_json.rs  mod.rs
