[package]
name = "opage"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = "4.5.21"
convert_case = "0.6.0"
log = "0.4.22"
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
oas3 = { path = "oas3-rs/crates/oas3" }

[workspace]
members = ["oas3-rs/crates/oas3"]
exclude = [
    "tests/projects/array_ref_type/output",
    "tests/projects/const_types/output",
    "tests/projects/empty_json_payload/output",
    "tests/projects/empty_spec/output",
    "tests/projects/inline_object_same_name/output",
    "tests/projects/multi_content_types/output",
    "tests/projects/primitive_component/output",
    "tests/projects/primitive_components_refs/output",
    "tests/projects/property_ref_type/output",
    "tests/projects/rust_keyword_component/output",
    "tests/projects/wandelbots/output",
]

[workspace.package]
repository = "https://github.com/vgerber/oas3-rs"
license = "MIT"
edition = "2021"
rust-version = "1.83"

[workspace.dependencies]
derive_more = "1"
http = "1"
log = "0.4"
once_cell = "1"
regex = "1.11.1"
semver = "1"
serde = "1"
serde_json = "1"
serde_yml = "0.0.12"
url = "2"
eyre = "0.6.12"
indoc = "2"
pretty_assertions = "1"


[workspace.lints.rust]
rust_2018_idioms = "deny"
nonstandard_style = "deny"
future_incompatible = "deny"
missing_debug_implementations = { level = "warn", priority = -1 }
