[package]
name = "opage"
version = "0.1.0"
edition = "2021"

[dependencies]
askama = "0.14.0"
clap = "4.5.21"
convert_case = "0.6.0"
log = "0.4.22"
oas3 = { version = "0.15.0", features = ["yaml-spec"]}
reqwest = "0.12.9"
serde = { version = "1.0.215", features = ["derive"] }
serde_json = "1.0.133"
serde_yaml = "0.9.34"
